--- a/requirements_gradio.txt
+++ b/requirements_gradio.txt
@@ -84,6 +84,7 @@ pip_audit==2.9.0
 platformdirs==4.3.8
 propcache==0.3.1
 protobuf==4.25.8
+psutil==7.0.0
 py-serializable==2.0.0
 pyarrow==20.0.0
 pydantic==2.11.5
