--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,16 +5,16 @@ services:
   gradio-app:
     build:
       context: ./gradio-app
-      dockerfile: ../../Dockerfile
+      dockerfile: Dockerfile
     ports:
       - "7860:7860"
     environment:
       - NEBIUS_API_KEY=${NEBIUS_API_KEY}
-      - MCP_BANDIT_URL=http://mcp-bandit:7861/gradio_api/mcp/sse
-      - MCP_DETECT_SECRETS_URL=http://mcp-detect-secrets:7862/gradio_api/mcp/sse
-      - MCP_PIP_AUDIT_URL=http://mcp-pip-audit:7863/gradio_api/mcp/sse
-      - MCP_CIRCLE_TEST_URL=http://mcp-circle-test:7864/gradio_api/mcp/sse
-      - MCP_SEMGREP_URL=http://mcp-semgrep:7865/gradio_api/mcp/sse
+      - MCP_BANDIT_URL=http://mcp-bandit:7860/gradio_api/mcp/sse
+      - MCP_DETECT_SECRETS_URL=http://mcp-detect-secrets:7860/gradio_api/mcp/sse
+      - MCP_PIP_AUDIT_URL=http://mcp-pip-audit:7860/gradio_api/mcp/sse
+      - MCP_CIRCLE_TEST_URL=http://mcp-circle-test:7860/gradio_api/mcp/sse
+      - MCP_SEMGREP_URL=http://mcp-semgrep:7860/gradio_api/mcp/sse
     depends_on:
       - mcp-bandit
       - mcp-detect-secrets
@@ -29,7 +29,7 @@ services:
   mcp-bandit:
     build:
       context: ./mcp/mcp-bandit
-      dockerfile: ../../Dockerfile
+      dockerfile: ../Dockerfile
     ports:
       - "7861:7860"
     networks:
@@ -40,7 +40,7 @@ services:
   mcp-detect-secrets:
     build:
       context: ./mcp/mcp-detect_secrets
-      dockerfile: ../../Dockerfile
+      dockerfile: ../Dockerfile
     ports:
       - "7862:7860"
     networks:
@@ -51,7 +51,7 @@ services:
   mcp-pip-audit:
     build:
       context: ./mcp/mcp-pip_audit
-      dockerfile: ../../Dockerfile
+      dockerfile: ../Dockerfile
     ports:
       - "7863:7860"
     networks:
@@ -62,7 +62,7 @@ services:
   mcp-circle-test:
     build:
       context: ./mcp/mcp-circle_test
-      dockerfile: ../../Dockerfile
+      dockerfile: ../Dockerfile
     ports:
       - "7864:7860"
     environment:
@@ -75,7 +75,7 @@ services:
   mcp-semgrep:
     build:
       context: ./mcp/mcp-semgrep
-      dockerfile: ../../Dockerfile
+      dockerfile: ../Dockerfile
     ports:
       - "7865:7860"
     networks:
