fix mcp and go to mcp-remote

--- a/gradio-app/Dockerfile
+++ b/gradio-app/Dockerfile
@@ -7,11 +7,13 @@ COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Install Node.js and npm
-RUN apt-get update && apt-get install -y nodejs npm
+# Install Node.js 18 and npm
+RUN apt-get update && apt-get install -y curl
+RUN curl -fsSL https://deb.nodesource.com/setup_18.x | bash -
+RUN apt-get install -y nodejs
 
-# Install npx
-RUN npm install -g npx
+# Install mcp-remote (npx уже включен в современный Node.js)
+RUN npm install -g mcp-remote
 
 # Set GRADIO_TEMP_DIR
 ENV GRADIO_TEMP_DIR=/app/temp
