--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,9 @@ services:
       dockerfile: Dockerfile
     ports:
       - "7860:7860"
+    env_file:
+      - ./gradio-app/.env
     environment:
-      - NEBIUS_API_KEY=${NEBIUS_API_KEY}
       - MCP_BANDIT_URL=http://mcp-bandit:7860/gradio_api/mcp/sse
       - MCP_DETECT_SECRETS_URL=http://mcp-detect-secrets:7860/gradio_api/mcp/sse
       - MCP_PIP_AUDIT_URL=http://mcp-pip-audit:7860/gradio_api/mcp/sse
