--- a/gradio-app/requirements.txt
+++ b/gradio-app/requirements.txt
@@ -5,8 +5,6 @@ aiohttp>=3.8.0
 aiosignal==1.3.2
 altair==5.5.0
 annotated-types==0.7.0
-anyio>=3.0.0
-asyncio==3.4.3
 attrs==25.3.0
 bandit[toml,baseline,sarif]>=1.7.0
 blinker==1.9.0
@@ -20,10 +18,10 @@ charset-normalizer==3.4.2
 click==8.1.8
 click-option-group==0.5.7
 colorama==0.4.6
-cyclonedx-python-lib==9.1.0
+cyclonedx-python-lib>=5,<9
 defusedxml==0.7.1
 Deprecated==1.2.18
-detect-secrets[word_list,gibberish]>=1.0.0
+detect-secrets>=1.0.0
 distro==1.9.0
 docstring_parser==0.16
 exceptiongroup==1.2.2
@@ -73,7 +71,7 @@ opentelemetry-semantic-conventions==0.46b0
 opentelemetry-util-http==0.46b0
 orjson==3.10.18
 packageurl-python==0.17.1
-packaging==24.2
+packaging>=20.9,<25
 pandas==2.3.0
 pbr==6.1.1
 peewee==3.18.1
@@ -84,7 +82,7 @@ pip-audit>=2.0.0
 platformdirs==4.3.8
 propcache==0.3.1
 protobuf==4.25.8
-py-serializable==2.0.0
+py-serializable>=1.1.1,<2.0.0
 pyarrow==20.0.0
 pydantic==2.11.5
 pydantic-settings==2.9.1
@@ -134,4 +132,3 @@ websockets==15.0.1
 wrapt==1.17.2
 yarl==1.20.0
 zipp==3.22.0
-smolagents>=0.1.0
