--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,23 @@
-# Virtual Environment
-venv/
-env/
-ENV/
+# =============================================================================
+# Security Tools MCP Agent - .gitignore
+# =============================================================================
 
 # Environment variables
 .env
 .env.*
+.env.local
+.env.development
+.env.production
+.env.staging
 
-# Gradio
-.gradio/
+# Virtual Environments
+venv/
+env/
+ENV/
+.venv/
+.ENV/
+env.bak/
+venv.bak/
 
 # Python
 __pycache__/
@@ -28,12 +37,289 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
 
-# IDE
-.idea/
+# PyInstaller
+*.manifest
+*.spec
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# pipenv
+Pipfile.lock
+
+# PEP 582
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# =============================================================================
+# Gradio Specific
+# =============================================================================
+.gradio/
+gradio_app/
+flagged/
+*.gradio*
+
+# =============================================================================
+# MCP Servers
+# =============================================================================
+# MCP server logs
+mcp/*/logs/
+mcp/*/*.log
+mcp/*/debug.log
+
+# MCP server temporary files
+mcp/*/tmp/
+mcp/*/temp/
+mcp/*/.cache/
+
+# Security tool outputs
+bandit-report.*
+semgrep-output.*
+detect-secrets-baseline
+pip-audit-report.*
+circle-test-output.*
+
+# Tool-specific files
+.bandit
+.semgrep*
+.secrets.baseline
+.pre-commit-config.yaml
+
+# =============================================================================
+# IDE and Editors
+# =============================================================================
+# VSCode
 .vscode/
+*.code-workspace
+
+# PyCharm
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# Vim
 *.swp
-*.swo 
+*.swo
+*~
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Atom
+.atom/
+
+# =============================================================================
+# Operating System
+# =============================================================================
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+
+# macOS Thumbnails
+._*
+
+# macOS Directory files
+.DS_Store?
+ehthumbs.db
+Thumbs.db
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msm
+*.msp
+*.lnk
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+
+# =============================================================================
+# Logs and Temporary Files
+# =============================================================================
+# Application logs
+*.log
+logs/
+log/
+
+# Temporary files
+tmp/
+temp/
+.tmp/
+.temp/
+
+# Backup files
+*.bak
+*.backup
+*.old
+*.orig
+
+# =============================================================================
+# Security and Sensitive Data
+# =============================================================================
+# API keys and secrets
+secrets.json
+config/secrets.yaml
+private.key
+*.pem
+*.p12
+*.pfx
+
+# Security scan results
+security-report.*
+vulnerability-report.*
+scan-results.*
+
+# =============================================================================
+# Dependencies and Package Managers
+# =============================================================================
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.eslintcache
+
+# Poetry
+poetry.lock
+
+# =============================================================================
+# Docker
+# =============================================================================
+# Docker files (if any)
+.dockerignore
+docker-compose.override.yml
+
+# =============================================================================
+# Database
+# =============================================================================
+*.db
+*.sqlite
+*.sqlite3
+
+# =============================================================================
+# Runtime and Process Files
+# =============================================================================
+*.pid
+*.seed
+*.pid.lock
+
+# =============================================================================
+# Archive and Compressed Files
+# =============================================================================
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# =============================================================================
+# Custom Project Files
+# =============================================================================
+# Fixed code downloads
+downloads/
+fixed_code/
+corrected_files/
+
+# Upload directory
+uploads/
+
+# Test files
+test_files/
+sample_code/
+
+# Documentation builds
+docs/_build/
+docs/site/
+
+# Coverage reports
+htmlcov/
+.coverage
+
+# Performance profiling
+*.prof
+
+# Cache directories
+.cache/
+__pycache__/
+
+# =============================================================================
+# End of .gitignore
+# ============================================================================= 
